marciano us links updated

--- a/Marciano/new-header-footer-marciano-US.html
+++ b/Marciano/new-header-footer-marciano-US.html
@@ -3,53 +3,53 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width"/>
- <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,300,600' rel='stylesheet' type='text/css'>
- <style type='text/css'>
-  .gmailfix {
-    display:none;
-    display:none!important;
-  }
-  .ioslink999 a {
-    text-decoration: underline;
-    color: #999999;
-  }
-  .ioslink333 a {
-    text-decoration: none;
-    color: #333333;
-  }
-  a img 
-  {
-    border: 0 none;
-  }
-  @media only screen and (max-width: 600px){
-    .preheader {
-      font-size: 1.5vw !important;
-    }
-    .fss {
-      font-size: 2.3vw !important;
-    }
-    .buttons {
-      font-size: 3.8vw !important;
-    }
-    .corporate {
-      font-size: 3vw !important;
-    }
-  }
-    @media only screen and (max-width: 380px){
-    .preheader {
-      font-size: 1.5vw !important;
-    }
-    .fss {
-      font-size: 3.6vw !important;
-    }
-    .buttons {
-      font-size: 4.7vw !important;
-    }
-    .corporate {
-      font-size: 3.4vw !important;
-    }
-  }
- </style>
+    <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,300,600' rel='stylesheet' type='text/css'>
+    <style type='text/css'>
+      .gmailfix {
+        display:none;
+        display:none!important;
+      }
+      .ioslink999 a {
+        text-decoration: underline;
+        color: #999999;
+      }
+      .ioslink333 a {
+        text-decoration: none;
+        color: #333333;
+      }
+      a img
+      {
+        border: 0 none;
+      }
+      @media only screen and (max-width: 600px){
+        .preheader {
+          font-size: 1.5vw !important;
+        }
+        .fss {
+          font-size: 2.3vw !important;
+        }
+        .buttons {
+          font-size: 3.8vw !important;
+        }
+        .corporate {
+          font-size: 3vw !important;
+        }
+      }
+        @media only screen and (max-width: 380px){
+        .preheader {
+          font-size: 1.5vw !important;
+        }
+        .fss {
+          font-size: 3.6vw !important;
+        }
+        .buttons {
+          font-size: 4.7vw !important;
+        }
+        .corporate {
+          font-size: 3.4vw !important;
+        }
+      }
+    </style>
   </head>
   <body style="max-width: 582px; margin-left: auto; margin-right: auto; -webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;">
     <div class="gmailfix" style="white-space:nowrap; font:15px courier; line-height:0;">
@@ -97,7 +97,7 @@
                       <tbody>
                         <tr>
                           <td>
-                            <a href="http://www.guess.ca/en/">
+                            <a href="https://guessbymarciano.guess.com/en/">
                               <img src="http://content.guess.com/GuessUS/Marciano/Emails/2016/Header+Footers/M-Logo.png" width="100%">
                             </a>
                           </td>
@@ -109,7 +109,7 @@
                       <tbody>
                         <tr>
                           <td style="padding-top:9px; padding-bottom:9px; text-align: center;">
-                            <a class= "fss" href="http://www.guess.ca/en/" style="display: block; font-family: Arial, Helvetica, sans-serif; font-size: 14px; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
+                            <a class= "fss" href="https://guessbymarciano.guess.com/en/" style="display: block; font-family: Arial, Helvetica, sans-serif; font-size: 14px; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
                               <strong>FREE SHIPPING*</strong> ON ORDERS $XXX+
                             </a>
                           </td>
@@ -132,7 +132,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:25px; padding-bottom:25px;">
-                            <a class="buttons" href="http://www.guess.ca/en/Catalog/Browse/women/" style="display: block; font-family:Arial, Helvetica, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .25em; font-weight: bold;">
+                            <a class="buttons" href="https://guessbymarciano.guess.com/en/Catalog/browse/new-arrivals/women/view-all/" style="display: block; font-family:Arial, Helvetica, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .25em; font-weight: bold;">
                               NEW ARRIVALS
                             </a>
                           </td>
@@ -144,7 +144,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:25px; padding-bottom:25px;">
-                            <a class="buttons" href="http://www.guess.ca/en/Catalog/Browse/?f_on_sale=Y" style="isplay: block; font-family:Arial, Helvetica, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .25em; font-weight: bold;">
+                            <a class="buttons" href="https://ntxwebserver07/en/catalog/Browse/?f_on_sale=Y&f_cat=women" style="isplay: block; font-family:Arial, Helvetica, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .25em; font-weight: bold;">
                               SALE
                             </a>
                           </td>
@@ -156,7 +156,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:25px; padding-bottom:25px;">
-                            <a class="buttons" href="http://www.guess.ca/en/StoreLocator/" style="isplay: block; font-family:Arial, Helvetica, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .25em; font-weight: bold;">
+                            <a class="buttons" href="https://guessbymarciano.guess.com/en/StoreLocator/" style="isplay: block; font-family:Arial, Helvetica, sans-serif; text-decoration: none; color: #000000; font-size: 20px; letter-spacing: .25em; font-weight: bold;">
                               FIND A STORE
                             </a>
                           </td>
@@ -168,7 +168,7 @@
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top:26px; padding-bottom:26px;">
-                            <a class="buttons" href="https://www.guess.ca/en/Account/Register?IsLoyalty=True" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ff0000; font-size: 20px; letter-spacing: .20em;">
+                            <a class="buttons" href="https://guessbymarciano.guess.com/en/Account/RegisterLoyalty/" style="display: block; width: 100%; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none; color: #ff0000; font-size: 20px; letter-spacing: .20em;">
                               JOIN GUESS LIST
                             </a>
                           </td>
@@ -212,7 +212,8 @@
                             </a>
                           </td>
                           <td>
-                            <a href="https://www.youtube.com/playlist?list=PLmDh5AgRZXmYMHDv_5DtVMyWtjeZI5lPU">
+                            <a href="https://www.youtube.com/user/GUESSincTV">
+                            <! ---- alternative link: https://www.youtube.com/playlist?list=PLmDh5AgRZXmYMHDv_5DtVMyWtjeZI5lPU ---->
                               <img style="width: 100%;" src="http://content.guess.com/GuessUS/Guess/headersFooters/2016/imgs/G_youtube_15900.png">
                             </a>
                           </td>
@@ -229,12 +230,12 @@
                       <tbody>
                         <tr>
                           <td style="width:50%; color: #ffffff; font-size:12px; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: right; padding-right:5%; padding-top:24px; padding-bottom:24px;">
-                            <a class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
+                            <a href="https://guessbymarciano.guess.com/en/privacypolicy/" class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
                               PRIVACY POLICY
                             </a>
                           </td>
                           <td style="width:50%; font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: left; padding-left:5%; padding-top:24px; padding-bottom:24px;">
-                            <a class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
+                            <a href="https://guessbymarciano.guess.com/en/customercare/contactus/" class="corporate" style="font-size:12px; color: #ffffff; font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-decoration: none;">
                               CONTACT US
                             </a>
                           </td>
@@ -257,8 +258,8 @@
                           For a limited time only.
                         </strong>
                          Offer valid ONLINE ONLY at
-                        <a href="http://www.guess.ca/en/" style="color:#333333;">
-                          GUESS.ca
+                        <a href="https://guessbymarciano.guess.com/en/" style="color:#333333;">
+                          Marciano.com
                         </a>
                       . Must use promo code GCA125 at checkout and select "Standard 5-7 Business Days" on the Shipping Page to receive this offer. Shipping offer valid
                       <span class="ioslink333">
@@ -269,8 +270,8 @@
                           GUESS.com
                         </span>
                         . For details on free in-store returns, visit
-                        <a href="http://www.guess.ca/customercare/returns" style="color:#333333;">
-                          GUESS.ca/customercare/returns
+                        <a href="https://guessbymarciano.guess.com/en/CustomerCare/Returns/" style="color:#333333;">
+                          Marciano.com/customercare/returns
                         </a>
                       . GUESS?, Inc. reserves the right to extend, modify or discontinue this offer at any time without notice.
                     </p>
@@ -280,12 +281,12 @@
                         For a limited time only.
                       </strong>
                       Duty discounted offer is valid online only at
-                      <a href="http://www.guess.ca/en/" style="color:#333333;">
-                        GUESS.ca
+                      <a href="https://guessbymarciano.guess.com/en/" style="color:#333333;">
+                        guessbymarciano.guess.com
                       </a>
                        for orders placed between February 4, 2014 at 12:01 a.m. PT and December 31, 2015 at 11:59 p.m. PT. Duty discount will be reflected on the Payment Page. Offer applies to duties only and does not apply to taxes. Taxes are calculated based on the merchandise subtotal and duties and varies by shipping destination. Although duties are not charged to your order, taxes on the duties will still be charged. Offer not valid at
-                       <a href="http://www.guess.ca/en/" style="color:#333333;">
-                        GUESS
+                       <a href="https://guessbymarciano.guess.com/en/" style="color:#333333;">
+                        guessbymarciano.guess.com
                       </a>
                        stores in the United States or Canada or at
                        <span class="ioslink333">
@@ -300,7 +301,7 @@
                       </a> to your address book.
                     </p>
                     <p style="font-size: 9px; line-height: 12px; font-family: Helvetica, Arial, sans-serif; text-align: center;">
-                      <a href="https://guess.ca/en/Subscription/Unsubscribe" style="color:#666666; text-decoration:underline;">
+                      <a href="https://guessbymarciano.guess.com/en/customercare/unsubscribe/" style="color:#666666; text-decoration:underline;">
                         <strong>
                           Unsubscribe
                         </strong>
