adding new PSDs

--- a/Guess/apology-email/Guess-apology-US.html
+++ b/Guess/apology-email/Guess-apology-US.html
@@ -432,7 +432,7 @@
                     </p>
                     <p style="color: #666666; font-size: 9px; line-height: 12px; font-family: Helvetica, Arial, sans-serif; text-align: center;">
                       To ensure you always receive emails from GUESS, including the latest styles and exclusive events, add
-                      <a _label="LEGAL-TEXT-Add-To-Favorites" href="mailto:noreply@admarketing.guess.ca" target="_self" alt="Disclaimer" _label="Disclaimer" style="color:#333333;text-decoration:underline;">
+                      <a _label="LEGAL-TEXT-Add-To-Favorites" href="mailto:noreply@admarketing.guess.ca" target="_self" alt="Disclaimer" style="color:#333333;text-decoration:underline;">
                         noreply@admarketing.guess.com
                       </a> to your address book.
                     </p>
