--- a/GuessFactory/CartAbandon/1/new-Guess-Factory-Cart-Abandon-1-US.html
+++ b/GuessFactory/CartAbandon/1/new-Guess-Factory-Cart-Abandon-1-US.html
@@ -103,24 +103,12 @@
                 <tr>
                   <td>
 <! ---- LOGO ---- !>
-                    <table style="width: 100%">
+                    <table style="width: 100%; border-bottom-color: #666666; border-bottom-style: solid; border-bottom-width: 1px;">
                       <tbody>
                         <tr>
                           <td style="text-align: center; padding-top: 16px; padding-bottom: 16px;">
                             <a class="logo" href="https://guessfactory.ca/en/" style="text-decoration: none; color: #d41e2b; line-height:1.4; letter-spacing:0.25em; font-size: 28px; font-family:Times;">
                               GUESS FACTORY
-                            </a>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
-<! ---- Free Shipping space --- !>
-                    <table style="width: 100%; border-top-style: solid; border-top-color: #666666; border-top-width: 1px; border-bottom-color: #666666; border-bottom-style: solid; border-bottom-width: 1px;">
-                      <tbody>
-                        <tr>
-                          <td style="padding-top: 8px; padding-bottom: 8px; text-align: center;">
-                            <a class= "fss" href="https://www.guessfactory.ca/en" style="display: block; font-family: Helvetica, Arial, sans-serif; font-size: 141x; line-height: 150%; text-decoration: none; color: #000000; letter-spacing: .15em;">
-                              <strong>FREE SHIPPING*</strong> ON ORDERS $XXX+
                             </a>
                           </td>
                         </tr>
@@ -134,7 +122,7 @@
 
   <! --- SECTION 1 ---->
 
-            <table style="width:100%;">
+            <table style="width:100%; background-color: #ebeaea; ;">
               <tbody>
                 <tr>
                   <td>
@@ -143,7 +131,7 @@
 <! ---- Title ---- >
                         <tr>
                           <td style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;padding-top: 50px;">
-                            <p class="title" style=" font-family: Helvetica, Arial, sans-serif; color: #000000; font-weight: bold; text-align: center; font-size: 48px; letter-spacing: 0.22em; margin-top: 50px; line-height: 0.9; margin-bottom: 40px;">
+                            <p class="title" style=" font-family: Helvetica, Arial, sans-serif; color: #000000; font-weight: bold; text-align: center; font-size: 50px;  margin-top: 50px; line-height: 0.9; margin-bottom: 40px;">
                               <spam>IN YOUR BAG</spam>
                             </p>
                           </td>
@@ -154,11 +142,11 @@
                     <table style='width:100%'>
                       <tbody>
                         <tr>
-                          <td style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;">
-                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; letter-spacing:.20em;font-size: 17px; color: #000000;">
+                          <td style="font-family: Helvetica, Arial, sans-serif; line-height:5px;">
+                            <p style="font-family: Helvetica, Arial, sans-serif; text-align: center; font-style: italic; font-size: 18px; color: #000000;">
                               The styles you added are waiting.
                             </p>
-                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; letter-spacing:.20em;font-size: 17px; color: #000000; margin-bottom: 50px;">
+                            <p style="font-family: Helvetica, Arial, sans-serif; text-align: center; font-style: italic; font-size: 18px; color: #000000;margin-bottom: 50px;">
                               Make it official.
                             </p>
                           </td>
@@ -181,10 +169,12 @@
                     <table style='width:100%'>
                       <tbody>
                         <tr>
-                          <td style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif;">
-                            <p style="font-family: 'Century Gothic', CenturyGothic, Futura, Verdana, sans-serif; text-align: center; margin-top: 30px; margin-bottom: 50px; font-size: 15px;color: #000000; text-transform: uppercase; letter-spacing:.18em; line-height: 20px">
-                              Charlene shirred dress<br>
-                              $89.00
+                          <td style="font-family: Helvetica Neue, Arial, sans-serif;">
+                            <p style="font-family: Helvetica Neue, Arial, sans-serif; font-weight: bold; text-align: center; margin-top: 30px; margin-bottom: 50px; font-size: 12px; color: #000000; text-transform: uppercase; letter-spacing:.18em; line-height: 20px;">
+                              The Skylin<br>
+                              Denim Shirt<br><br>
+                              <span style="font-weight: normal;">WAS $59.99</span>
+                              <span style="font-weight: normal; color: #fb4c4c">$44.00</span>
                             </p>
                           </td>
                         </tr>
