--- a/GuessFactory/CartAbandon/1/new-Guess-Factory-Cart-Abandon-1-US.html
+++ b/GuessFactory/CartAbandon/1/new-Guess-Factory-Cart-Abandon-1-US.html
@@ -122,7 +122,7 @@
 
   <! --- SECTION 1 ---->
 
-            <table style="width:100%; background-color: #ebeaea; ;">
+            <table style="width:100%; background-color: #ebeaea;">
               <tbody>
                 <tr>
                   <td>
@@ -170,7 +170,7 @@
                       <tbody>
                         <tr>
                           <td style="font-family: Helvetica Neue, Arial, sans-serif;">
-                            <p style="font-family: Helvetica Neue, Arial, sans-serif; font-weight: bold; text-align: center; margin-top: 30px; margin-bottom: 50px; font-size: 12px; color: #000000; text-transform: uppercase; letter-spacing:.18em; line-height: 20px;">
+                            <p style="font-family: 'Helvetica Neue', Arial, sans-serif; font-weight: bold; text-align: center; margin-top: 30px; margin-bottom: 50px; font-size: 12px; color: #000000; text-transform: uppercase; letter-spacing:.18em; line-height: 20px;">
                               The Skylin<br>
                               Denim Shirt<br><br>
                               <span style="font-weight: normal;">WAS $59.99</span>
@@ -186,8 +186,8 @@
                         <tr>
                           <td style='width:98px'>
                           </td>
-                          <td style="text-align: center; border-top-style: solid; border-top-width: 3px; border-top-color: #000000; border-right-style: solid; border-right-width: 3px; border-right-color: #000000; width: 386px; border-bottom-style: solid; border-bottom-width: 3px; border-bottom-color: #000000; border-left-style: solid; border-left-width: 3px; border-left-color: #000000; padding-bottom: 31px; padding-top: 31px; font-family:'Century Gothic', 'CenturyGothic', Futura, Verdana, sans-serif;">
-                            <a href="https://www.guessfactory.com/en/ShoppingBag" style="text-decoration: none; display:block; letter-spacing:.20em; font-size: 17px; color: #000000;">
+                          <td style="text-align: center; border-top-style: solid; border-top-width: 3px; border-top-color: #000000; border-right-style: solid; border-right-width: 3px; border-right-color: #000000; width: 386px; border-bottom-style: solid; border-bottom-width: 3px; border-bottom-color: #000000; border-left-style: solid; border-left-width: 3px; border-left-color: #000000; padding-bottom: 31px; padding-top: 31px; background-color: #000000">
+                            <a href="https://www.guessfactory.com/en/ShoppingBag" style="font-family: 'Helvetica Neue', Arial, sans-serif; font-weight: bold; text-decoration: none; display:block; letter-spacing:.20em; font-size: 23px; color: #ffffff;">
                               <spam>COMPLETE ORDER</spam>
                             </a>
                           </td>
@@ -202,7 +202,7 @@
             </table>
 <! ---- END SECTION 1 ---- >
 <! ---- Space Between sections ---- >
-            <table style="width:100%;">
+            <table style="width:100%; background-color: #ebeaea; border-bottom-color: #000000; border-bottom-style: solid; border-bottom-width: 2px;">
               <tbody>
                 <tr>
                   <td>
@@ -218,7 +218,7 @@
               </tbody>
             </table>
 <! ---- SECTION 2 ---- >
-            <table style='width:100%;'>
+            <table style='width:100%; background-color: #ebeaea;'>
               <tbody>
                 <tr>
                   <td>
@@ -228,7 +228,7 @@
                         <tr>
                           <td>
                             <p style="font-family: Helvetica, Arial, sans-serif; text-decoration: none; color: #000000; font-size: 33px; letter-spacing: .09em; font-weight: bold; text-align: center; margin-bottom: 20px;">
-                              YOU MIGHT ALSO LIKE
+                              JUST FOR YOU
                             </p>
                           </td>
                         </tr>
@@ -482,7 +482,6 @@
                       . GUESS?, Inc. reserves the right to extend, modify or discontinue this offer at any time without notice.
                     </p>
                     <p style="font-size: 9px; line-height: 12px; font-family: Helvetica, Arial, sans-serif; color: #666666">
-                      ✝✝
                       <strong>
                         For a limited time only.
                       </strong>
